--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: tuple_dart
 description: A library providing a tuple data structure for Dart
 version: 1.0.0
-# homepage: https://www.example.com
+homepage: https://github.com/avdosev
+repository: https://github.com/avdosev/tuple_dart
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
