--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tuple_dart
-description: A library providing a tuple data structure for Dart
-version: 1.2.0
+description: A library providing a tuple data structure for Dart and a convenient way to use it
+version: 1.3.0
 homepage: https://github.com/avdosev
 repository: https://github.com/avdosev/tuple_dart
 
